Seems like eigen could be added into PX4 which means that there could be a chance to do optimization, hoever this commit adds in eigen into the obvp package and introduces the fpgm which may be used

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "PX4-Matrix"]
 	path = PX4-Matrix
 	url = git@github.com:matthewoots/PX4-Matrix.git
+[submodule "eigen"]
+	path = eigen
+	url = git@github.com:PX4/eigen.git
