[Large commit] 1. Added FPGM model, including dynamics used in constrains into a header file 2. Included NLOPT COBYLA optimization that solves the nonlinear optimization problem with our dynamics which are non linear constrains 3. Added parameters pulling from yaml file, provide boundary and model parameters 4. Fixed a major bug in the OBVP header file, that skews the values of the spline due to not adding the proper t value

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "eigen"]
 	path = eigen
 	url = git@github.com:PX4/eigen.git
+[submodule "yaml-cpp"]
+	path = yaml-cpp
+	url = git@github.com:jbeder/yaml-cpp.git
