[Large commit] 1. Added FPGM model, including dynamics used in constrains into a header file 2. Included NLOPT COBYLA optimization that solves the nonlinear optimization problem with our dynamics which are non linear constrains 3. Added parameters pulling from yaml file, provide boundary and model parameters 4. Fixed a major bug in the OBVP header file, that skews the values of the spline due to not adding the proper t value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,30 +5,46 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wno-deprecated-declarations"
 
 file(GLOB INCLUDE_FILES "include/*.h")
 file(GLOB SRC_FILES "src/*.cpp")
+file(COPY "src/parameters.yaml" DESTINATION ${CMAKE_BINARY_DIR})
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
+    ${NLOPT_INCLUDE_DIR}
     PX4-Matrix/matrix
     mathlib
     eigen
 )
+
+add_subdirectory(yaml-cpp)
 
 # add_executable(${PROJECT_NAME}_bvp
 #     src/bvp_test.cpp
 #     src/geo.cpp
 # )
 
-# add_executable(${PROJECT_NAME}_precision_landing
-#     src/landing_test.cpp
-#     src/geo.cpp
-# )
+add_executable(${PROJECT_NAME}_precision_landing
+    src/landing_test.cpp
+    src/geo.cpp
+)
 
 add_executable(${PROJECT_NAME}_precision_landing_eigen
     src/landing_eigen_test.cpp
     src/geo.cpp
 )
 
+add_executable(${PROJECT_NAME}_opt_landing
+    src/opt_landing.cpp
+    src/geo.cpp
+)
+target_link_libraries(${PROJECT_NAME}_opt_landing 
+    yaml-cpp
+    nlopt
+)
+
 add_library(${PROJECT_NAME} STATIC ${SRC_FILES} ${INCLUDE_FILES})
-target_include_directories (${PROJECT_NAME} PUBLIC 
-    ${PROJECT_SOURCE_DIR} 
-    ${PROJECT_SOURCE_DIR}/include)
+target_include_directories (${PROJECT_NAME} 
+    PUBLIC 
+        ${PROJECT_SOURCE_DIR} 
+        ${PROJECT_SOURCE_DIR}/include
+        yaml-cpp
+)
