[Large commit] 1. Added more constrain parameters and tuned the weights for the states and inputs 2. Added matplot interface to visualize the descend plot (./obvp_opt_landing) and added the submodule libraries into include, however keep yaml-cpp since we have to compile it using add-submodule in cmake 3. Added more constrains for the platform and to add parameters file that encompass all settings 4. Fixed some orientation bug for velocity

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "PX4-Matrix"]
-	path = PX4-Matrix
+	path = include/PX4-Matrix
 	url = git@github.com:matthewoots/PX4-Matrix.git
 [submodule "eigen"]
-	path = eigen
+	path = include/eigen
 	url = git@github.com:PX4/eigen.git
 [submodule "yaml-cpp"]
 	path = yaml-cpp
 	url = git@github.com:jbeder/yaml-cpp.git
+[submodule "include/matplotlib-cpp"]
+	path = include/matplotlib-cpp
+	url = git@github.com:lava/matplotlib-cpp.git
