--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wno-deprecated-declarations"
 
 file(GLOB INCLUDE_FILES "include/*.h")
 file(GLOB SRC_FILES "src/*.cpp")
-file(COPY "src/parameters.yaml" DESTINATION ${CMAKE_BINARY_DIR})
+# file(COPY "src/parameters.yaml" DESTINATION ${CMAKE_BINARY_DIR})
+
+find_package(PythonLibs REQUIRED)
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/include
     ${NLOPT_INCLUDE_DIR}
-    PX4-Matrix/matrix
-    mathlib
-    eigen
+    ${PYTHON_INCLUDE_DIRS}
+    include/PX4-Matrix/matrix
+    include/mathlib
+    include/eigen
+    include/matplotlib-cpp
 )
 
 add_subdirectory(yaml-cpp)
@@ -27,16 +31,17 @@ add_executable(${PROJECT_NAME}_precision_landing
     src/geo.cpp
 )
 
-add_executable(${PROJECT_NAME}_precision_landing_eigen
-    src/landing_eigen_test.cpp
-    src/geo.cpp
-)
+# add_executable(${PROJECT_NAME}_precision_landing_eigen
+#     src/landing_eigen_test.cpp
+#     src/geo.cpp
+# )
 
 add_executable(${PROJECT_NAME}_opt_landing
     src/opt_landing.cpp
     src/geo.cpp
 )
 target_link_libraries(${PROJECT_NAME}_opt_landing 
+    ${PYTHON_LIBRARIES}
     yaml-cpp
     nlopt
 )
@@ -48,3 +53,9 @@ target_include_directories (${PROJECT_NAME}
         ${PROJECT_SOURCE_DIR}/include
         yaml-cpp
 )
+# https://stackoverflow.com/a/34800230
+add_custom_command(
+    TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_SOURCE_DIR}/src/parameters.yaml
+            ${CMAKE_CURRENT_BINARY_DIR}/parameters.yaml)
